welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime188.PictureMono2'
override def run() {
             ^